# Dynamical-Skill-Centric-Location-Adaptive-Privacy-Preserving-Imitation-Leanring-Platform

./: .gitignore  README.md  launch_dev.bat  launch_orin.sh  pyproject.toml  requirements.txt  setup_orin.sh
.github/workflows/: ci.yml
config/: config.yaml  custom_hazards.json
config/model/: diffusion_policy.yaml
config/robot/: agx_orin.yaml
docs/: COMPREHENSIVE_GAP_ANALYSIS.md  DEPENDENCIES.md  DEPLOYMENT_ARCHITECTURE.md  DEPTH_ANYTHING_V3_INTEGRATION_ANALYSIS.md  DEVELOPER_NOTES.md  MOLMOACT_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  MOLMOACT_GAP_ANALYSIS.md  MOLMOACT_INTEGRATION_MAPPING.md  PRODUCTION_ARCHITECTURE.md  PRODUCT_REQUIREMENTS_V1.0.md  SETUP_GUIDE.md  SYSTEM_OVERVIEW.md  WHOLE_BODY_RETARGETING_GAP_ANALYSIS.md  user_manual.md
docs/design/: titan_architecture.md
docs/research/: dynamical_moe_skills_paper.md
docs/user-manual/: 01-installation-guide.md  02-operation-guide.md  03-post-deployment-guide.md  README.md
firmware/dyglove_stm32/: INSTALLATION_GUIDE.md  Makefile
firmware/dyglove_stm32/src/: main.c
models/paligemma/: README.txt
scripts/: benchmark_latency.py  demo_isaac_lab_simulation.py  download_models.py  install_os_deps.sh  install_python_deps.sh  install_vision_deps.sh  read_pdf.py  robustness_test.py  run_analysis.py  stress_test.py  stress_test_frontend.py  verify_db.py  verify_fhe.py  verify_hardening.py  verify_imports.py  verify_integration.py  verify_platform.py  warehouse_simulation.py
src/: version.py
src/composition/: __init__.py  contracts.py  library.py  verifier.py
src/composition/runtime/: __init__.py  postcondition_verifier.py  transition_safety.py
src/core/: __init__.py  action_chunking.py  batch_autotuner.py  config_loader.py  environment_hazards.py  error_handling.py  gmr_retargeting.py  hand_retargeting.py  human_state.py  memory_monitor.py  meta_ai_models.py  neuracore_client.py  retargeting.py  robot_skill_invoker.py  schema_validator.py  skill_blender.py  spatial_skill_router.py  system_robustness.py  timing_architecture.py  unified_skill_orchestrator.py  whole_body_gmr.py  wholebody_pose_pipeline.py
src/core/depth_estimation/: __init__.py  depth_anything_v3.py  depth_pose_fusion.py
src/core/pose_inference/: __init__.py  person_detector.py  rtmpose_real.py
src/core/retargeting/: __init__.py  ik_solver.py  kinematics.py  motion_retargeter.py
src/drivers/: __init__.py  cameras.py  daimon_vtla.py  dyglove.py  glove_calibration.py  gmr.py  onvif_ptz.py
src/execution/: __init__.py  dynamical_executor.py  task_decomposer.py
src/federated/: __init__.py  unified_pipeline.py
src/jetson/: device_manager_ui.html  edge_service.py  jetson_sdk.py
src/meta_ai/: __init__.py  dinov3.py  privacy_wrapper.py  sam3.py  unified_perception.py  vjepa2.py
src/moai/: __init__.py  isaac_ros_nodes.py  moai_fhe.py  moai_pt.py  n2he.py
src/pipeline/: __init__.py  integrated_pipeline.py  run_pi0.py
src/platform/: jetson_thor.py  logging_utils.py  network_manager.py  ota_manager.py  safety_manager.py
src/platform/api/: arm_api.py  database.py  integrator_api.py  main.py  platform_api.py  simulation_ws.py
src/platform/calibration/: __init__.py  camera_calibration.py  dyglove_calibration.py  mmpose_calibration.py
src/platform/cloud/: __init__.py  federated_learning.py  ffm_client.py  ffm_client_real.py  model_client.py  moe_skill_router.py  secure_aggregator.py  vendor_adapter.py  vendor_adapter_real.py
src/platform/edge/: __init__.py  dyglove_sdk.py  edge_service.py  glove_factory.py  jetson_orin_sdk.py  manus_sdk.py  onvif_cameras.py  skill_client.py
src/platform/frontend/: index.html
src/platform/launcher/: launcher.py
src/platform/observability/: FHE_Auditor.py  RootCauseAnalyzer.py  TraceManager.py  __init__.py  observability.py
src/platform/robot/: RobotRegistry.py
src/platform/sdk/: dynamical_sdk.py
src/platform/ui/: package-lock.json  (+2 more)
src/product/: __init__.py  deployment.py  fleet.py  monitoring.py  multilingual.py  semantic_planner.py  task_api.py
src/robot_runtime/: __init__.py  actuator_interface.py  agent.py  config.py  deployment_validator.py  execution_state.py  perception_pipeline.py  policy_executor.py  ros2_bridge.py  safety_shield.py  skill_cache.py  state_estimator.py  watchdog.py
src/ros2/dynamical_bringup/: CMakeLists.txt  package.xml
src/ros2/dynamical_bringup/config/: robot_params.yaml
src/ros2/dynamical_bringup/launch/: robot_runtime.launch.py
src/ros2/dynamical_bringup/scripts/: api_bridge_node.py
src/ros2/dynamical_msgs/: CMakeLists.txt  package.xml
src/ros2/dynamical_msgs/action/: ExecuteSkillAction.action  MoveToPosition.action
src/ros2/dynamical_msgs/msg/: Detection.msg  JointState.msg  PerceptionFeatures.msg  RobotState.msg  SafetyStatus.msg  SafetyViolation.msg  SkillStatus.msg  SystemStatus.msg  TelemetryData.msg
src/ros2/dynamical_msgs/srv/: ExecuteSkill.srv  GetRobotState.srv  GetSystemStatus.srv  LoadSkill.srv  ResetEstop.srv  SetControlMode.srv  StopSkill.srv  TriggerEstop.srv
src/ros2/dynamical_perception/: CMakeLists.txt  package.xml
src/ros2/dynamical_perception/dynamical_perception/: __init__.py
src/ros2/dynamical_perception/scripts/: perception_pipeline_node.py
src/ros2/dynamical_runtime/: CMakeLists.txt  package.xml
src/ros2/dynamical_runtime/include/dynamical_runtime/: safety_node.hpp
src/ros2/dynamical_runtime/src/: safety_node.cpp
src/safety/: __init__.py  executor.py
src/shared/: __init__.py
src/simulation/: __init__.py
src/spatial_intelligence/: __init__.py  deep_imitative_learning.py  visual_trace.py  vla_interface.py
tests/: smoke_test.py  test_api_direct.py  test_api_hazards.py  test_config_loader.py  test_deep_imitative_learning.py  test_defensive_architecture.py  test_depth_estimation.py  test_error_handling.py  test_execution.py  test_hazards.py  test_integration.py  test_meta_ai.py  test_meta_ai_integration.py  test_perception_api.py  test_pi05_integration.py  test_pipeline_comprehensive.py  test_runtime_verification.py  test_simulation.py  test_unified_pipeline.py  test_visual_trace.py  test_whole_body_gmr.py
(+86 files in other folders)
