<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamical_bringup</name>
  <version>0.7.0</version>
  <description>Launch files and configuration for Dynamical Edge Platform</description>
  <maintainer email="support@dynamical.ai">Dynamical AI</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>dynamical_msgs</exec_depend>
  <exec_depend>dynamical_runtime</exec_depend>
  <exec_depend>dynamical_perception</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
