<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamical_perception</name>
  <version>0.7.0</version>
  <description>ROS 2 perception pipeline for Dynamical Edge Platform with Isaac ROS acceleration</description>
  <maintainer email="support@dynamical.ai">Dynamical AI</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>dynamical_msgs</depend>

  <!-- Image processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>

  <!-- Isaac ROS (if available) -->
  <exec_depend>isaac_ros_dnn_inference</exec_depend>
  <exec_depend>isaac_ros_tensor_list_interfaces</exec_depend>
  <exec_depend>isaac_ros_nitros</exec_depend>

  <!-- TensorRT -->
  <depend>tensorrt_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
